# atmcirclib

./: .copier-answers.yml  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pydocstyle  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  README.md  USAGE.md  dev-environment.yml  dev-requirements.in  dev-requirements.yml  environment.yml  get_data.sh  mypy.ini  pylintrc  pyproject.toml  requirements.in  requirements.yml  run-mypy.sh  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst
jenkins/: JenkinsJobPR  Jenkinsfile
recipe/: meta.v0.2.0.yaml  meta.yaml
recipe/v0.0.1/: meta.yaml
recipe/v0.1.0/: meta.yaml
recipe/v0.2.1/: meta.yaml
recipe/v0.2.2/: meta.yaml
recipe/v0.2.3/: meta.yaml
recipe/v0.2.4/: meta.yaml
recipe/v0.3.0/: meta.yaml
requirements/: dev-environment.yml  dev-requirements.yml  environment.yml  requirements.yml
src/atmcirclib/: __init__.py  click.py  cosmo.py  geo.py  icon.py  math.py  plot_utils.py  regular_grid.py  simulations.py  traj.py  typer.py  typing.py  utils.py
src/atmcirclib/deriv/: __init__.py
src/atmcirclib/deriv/ext/: __init__.py
src/atmcirclib/deriv/ext/_f77/: __init__.py
src/atmcirclib/deriv/ext/_f90/: __init__.py
src/atmcirclib/deriv/ext/f77/: __init__.py
src/atmcirclib/deriv/ext/f90/: __init__.py
src/atmcirclib/fortran/: __init__.py  namelist_parser.py
src/atmcirclib/intp/: __init__.py  gt_level_interpolator.py
src/atmcirclib/plot/: __init__.py  rgb.py
src/atmcirclib/tools/: __init__.py  call_graph.py
src/atmcirclib/traj/: __init__.py  criteria.py  dataset.py  dataset_ds.py  lagranto.py  start_dataset.py  traj_dataset.py  traj_start_dataset.py
tests/test_atmcirclib/: test_math.py
tests/test_atmcirclib/test_cosmo/: test_cosmo_grid_dataset.py
tests/test_atmcirclib/test_geo/: test_bounding_box.py
tests/test_atmcirclib/test_intp/: __init__.py  test_level_interpolator.py
tests/test_atmcirclib/test_traj/: test_traj.py
tests/test_atmcirclib/test_traj/test_criteria/: test_formatter.py
tests/test_atmcirclib/test_traj/test_dataset/: shared.py  test_base.py  test_count_select.py  test_lagranto.py  test_time_handler.py
tests/test_atmcirclib/test_traj/test_traj_dataset/: shared.py  test_base.py  test_count_select.py
tests/test_gt4py/: __init__.py
tools/: create_envs.sh  create_recipe.py  install_editable.sh  run-mypy.sh  run_update_min_versions.sh  setup_env.sh  update_min_reqs.sh  update_min_versions.sh  update_requirements_min_versions.sh
