[build-system]
requires = ["setuptools >= 35.0.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
default_section = "THIRDPARTY"
force_grid_wrap = false
force_single_line = true
line_length = 88
order_by_type = false
# Headings
import_heading_stdlib = "Standard library"
import_heading_thirdparty = "Third-party"
import_heading_firstparty = "First-party"
import_heading_localfolder = "Local"
# Known modules to avoid misclassification
known_standard_library = []
known_first_party = []
known_third_party = [
    "click",
    "numpy",
    "matplotlib"
]

[tool.pydocstyle]
ignore = [
    "D203",  # 1 blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at the second line
    "D407",  # Missing dashed underline after section
]
